Be a little more consistent with directory naming
- replace underscores with hyphens
- put gcp at the start of the name of everything gcp-related

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,10 @@
 .git
 client/elm-stuff
 client/tests/elm-stuff
-gcp-builder-dir/
 integration-tests/screenshots
 server/_build
-rundir/
+rundir
+persistdir
+gcp-rundir
+gcp-persistdir
+gcp-builddir
