Clean up gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,12 @@
 /.browser-trigger
 /client/elm-stuff
 /client/tests/elm-stuff
-/gcp-builddir
-!/gcp-builder-dir/Dockerfile
-/integration-tests/screenshots/*
-/integration-tests/report.json
+/gcp-rundir
+/gcp-persistdir
 /rundir
 /persistdir
 /server/*/.merlin
 /server/_build
-!/server/test_appdata/test_*.dark
-!/server/test_appdata/test_*.json
-/server/test_appdata/completed_tests/*
 /server/ocamlbuild_output.txt
 /server/profile.json
 /server/serialization
