Properly copy service key into docker

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,11 +113,12 @@ jobs:
           name: Get GCP deploy key
           command: |
             echo $GCLOUD_SERVICE_KEY \
-              | base64 --decode --ignore-garbage \
-                > /home/dark/app/gcloud-service-key.json
+              | base64 --decode --ignore-garbage > gcloud-service-key.json
+            docker cp gcloud-service-key.json \
+              vols:/home/dark/gcloud-service-key.json
+
             scripts/run-in-docker gcloud auth activate-service-account \
-              --key-file \
-                /home/dark/.config/gcloud/gcloud-service-key.json
+              --key-file /home/dark/gcloud-service-key.json
 
       - run: scripts/run-in-docker scripts/gcp-deploy
 
