Disable deploy from CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,16 +119,18 @@ jobs:
             scripts/run-in-docker gcloud auth activate-service-account \
               --key-file /home/dark/app/gcloud-service-key.json
 
-      - run: scripts/run-in-docker scripts/gcp-deploy
-
-      # For now, we do integration tests after the deploy. If they work
-      # above, then it works. This needs more work but I'm stopping here
+      # TODO: This fails by timing out during the upload to gcr. Skip
       # for now.
-      - run:
-          command: scripts/run-in-docker scripts/gcp-run-locally
-          background: true
+      # - run: scripts/run-in-docker scripts/gcp-deploy
 
-      - run: scripts/run-in-docker integration-tests/run.sh --gcp
+      # # For now, we do integration tests after the deploy. If they work
+      # # above, then it works. This needs more work but I'm stopping here
+      # # for now.
+      # - run:
+      #     command: scripts/run-in-docker scripts/gcp-run-locally
+      #     background: true
+
+      # - run: scripts/run-in-docker integration-tests/run.sh --gcp
 
       # TODO: figure this out when the container actually runs
       # - run:
