--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,16 +108,17 @@ jobs:
 
       - run: scripts/run-in-docker scripts/gcp-build-container
 
-      - run:
-          name: Get GCP deploy key
-          command: |
-            echo $GCLOUD_SERVICE_KEY \
-              | base64 --decode --ignore-garbage > gcloud-service-key.json
-            docker cp gcloud-service-key.json \
-              dark-dev:/home/dark/app/gcloud-service-key.json
+      # Disable this as all further stuff is disabled.
+      # - run:
+      #     name: Get GCP deploy key
+      #     command: |
+      #       echo $GCLOUD_SERVICE_KEY \
+      #         | base64 --decode --ignore-garbage > gcloud-service-key.json
+      #       docker cp gcloud-service-key.json \
+      #         dark-dev:/home/dark/app/gcloud-service-key.json
 
-            scripts/run-in-docker gcloud auth activate-service-account \
-              --key-file /home/dark/app/gcloud-service-key.json
+      #       scripts/run-in-docker gcloud auth activate-service-account \
+      #         --key-file /home/dark/app/gcloud-service-key.json
 
       # TODO: This fails by timing out during the upload to gcr. Skip
       # for now.
