--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "dependencies": {
     "domready": "^1.0.8",
     "mouse-wheel": "^1.2.0",
-    "rollbar-browser": "^1.9.5"
+    "rollbar": "^2.3.9"
   }
 }
