Store junit test outputs on CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,5 +146,7 @@ jobs:
 
       - store_artifacts:
           path: artifacts
+      - store_test_results:
+          path: artifacts/rundir1/integration_tests.xml
 
 
