--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ tunnel.yaml
 # Files that get created on CI. We check that status is clean so need to list these.
 /client/node_modules
 /stroller/target
+/backend/_esy
+/backend/node_modules
