Speed up integration-tests in CI by tar.gz'ing artifacts
Per https://circleci.com/docs/2.0/artifacts/:

"If you’re uploading hundreds of artifacts, then consider compressing
and uploading as a single compressed file [1] to accelerate this step."

[1] https://support.circleci.com/hc/en-us/articles/360024275534

I don't know that we've hit "hundreds" yet, but the upload artifacts
step takes ~3:30m, which basically doubles the integration-test job's
run time. Ouch. (Not sure why circle doesn't just do this for us ...)

https://trello.com/c/DmQOUAXZ/1767-integration-tests-upload-artifact-step-almost-doubles-that-jobs-ci-time

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,8 @@ commands:
           command: |
             mkdir -p artifacts
             docker cp vols:/home/dark/app/rundir artifacts/rundir
+            tar -czvf artifacts/rundir.tar.gz artifacts/rundir
+            rm -r artifacts/rundir
             docker cp vols:/home/dark/app/backend/static/etags.json artifacts/
             ls -la backend/static > artifacts/asset-list.txt
       - store_artifacts:
