--- a/scripts/support/kubernetes/tunnel/isolate-tunnel.yaml
+++ b/scripts/support/kubernetes/tunnel/isolate-tunnel.yaml
@@ -15,4 +15,4 @@ spec:
             matchExpressions:
             - key: app
               operator: In
-              values: [bwd-app, qw-worker, cron-checker]
+              values: [bwd-app, qw-worker, cron-checker, maxim-qw-worker]
