--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -335,9 +335,12 @@ jobs:
       - wait-for-server
       - run: docker cp vols:/home/dark/app/backend/static/etags.json backend/static
       - run: scripts/run-in-docker scripts/gcp-build-containers
-      - run: | 
-        docker run timeout 30s scripts/support/gcp-run-cronchecker
-        [[ $? = 124 ]] # if `timeout` times out, exit status will be 124
+      - run:
+          name: check-cronchecker
+          shell: bash
+          command: |
+            docker run timeout 30s scripts/support/gcp-run-cronchecker
+            [[ $? = 124 ]] # if `timeout` times out, exit status will be 124
 
   test-failure:
     executor: my-executor
@@ -351,9 +354,12 @@ jobs:
       - wait-for-server
       - run: docker cp vols:/home/dark/app/backend/static/etags.json backend/static
       - run: scripts/run-in-docker scripts/gcp-build-containers
-      - run: | 
-        docker run timeout 30s false
-        [[ $? = 124 ]] # if `timeout` times out, exit status will be 124
+      - run:
+          name: check-failure
+          shell: bash
+          command: |
+            docker run timeout 30s false
+            [[ $? = 124 ]] # if `timeout` times out, exit status will be 124
 
 
   integration-tests:
