--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -339,7 +339,7 @@ jobs:
           name: check-cronchecker
           shell: bash
           command: |
-            docker run timeout 30s scripts/support/gcp-run-cronchecker
+            docker run timeout 40s scripts/support/gcp-run-cronchecker
             [[ $? = 124 ]] # if `timeout` times out, exit status will be 124
 
   test-failure:
@@ -358,7 +358,7 @@ jobs:
           name: check-failure
           shell: bash
           command: |
-            docker run timeout 30s false
+            docker run timeout 40s false
             [[ $? = 124 ]] # if `timeout` times out, exit status will be 124
 
 
@@ -469,11 +469,13 @@ workflows:
           requires:
             - build-backend
             - build-client
+            - build-stroller
 
       - test-failure:
           requires:
             - build-backend
             - build-client
+            - build-stroller
 
       # pre-deploy, in parallel with integration-tests
       - push-to-gcp:
