load /login, not /user-login'

--- a/scripts/support/nginx.conf
+++ b/scripts/support/nginx.conf
@@ -192,7 +192,7 @@ server {
     # dnsmasq running.
     # resolver 127.0.0.1 ipv6=off;
     # Reconstruct the remote URL
-    set $download_url https://ops-corpsite.builtwithdark.com/user-login;
+    set $download_url https://ops-corpsite.builtwithdark.com/login;
     # Headers for the remote server, unset Authorization and Cookie for security reasons.
     proxy_set_header Host ops-corpsite.builtwithdark.com;
     proxy_set_header Authorization '';
