give postgres-honeytail some more CPUs

--- a/scripts/support/kubernetes/postgres-honeytail-deployment.yaml.template
+++ b/scripts/support/kubernetes/postgres-honeytail-deployment.yaml.template
@@ -22,11 +22,11 @@ spec:
           #  https://medium.com/google-cloud/quality-of-service-class-qos-in-kubernetes-bb76a89eb2c6
           resources:
             requests:
-              memory: "128Mi"
-              cpu: "500m"
+              memory: "128M"
+              cpu: "2000m"
             limits:
-              memory: "512Mi"
-              cpu: "750m"
+              memory: "256M"
+              cpu: "6000m"
           env:
             - name: DARK_CONFIG_RUNNING_IN_GKE
               value: "true"
