Save static directory (bust caches)
Tests are failing because etags.json is not available. I suspect this is because
it was not saved in the cache and was not rebuilt

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,10 +201,10 @@ jobs:
       - initialize
       - restore_cache:
           keys:
-            - v9-backend-{{ checksum "rundir/today-timestamp" }}
-            - v9-backend-{{ checksum "rundir/minus1-timestamp" }}
-            - v9-backend-{{ checksum "rundir/minus2-timestamp" }}
-            - v9-backend-{{ checksum "rundir/minus3-timestamp" }}
+            - v10-backend-{{ checksum "rundir/today-timestamp" }}
+            - v10-backend-{{ checksum "rundir/minus1-timestamp" }}
+            - v10-backend-{{ checksum "rundir/minus2-timestamp" }}
+            - v10-backend-{{ checksum "rundir/minus3-timestamp" }}
       - clean-caches: { path: "backend/_build" }
       # appsupport is needed for a unit test
       - run: touch backend/static/appsupport.js
@@ -223,7 +223,11 @@ jobs:
             docker cp vols:/home/dark/app/backend/static/. backend/static
       - save_cache:
           name: "Save daily backend cache"
-          paths: [ "backend/_build", "backend/_esy", "backend/node_modules" ]
+          paths:
+            - backend/_build
+            - backend/_esy
+            - backend/node_modules
+            - backend/static
           key: v9-backend-{{ checksum "rundir/today-timestamp" }}
       - persist_to_workspace:
           root: "."
